--- a/notebooks/rnnplus_for_har/RNNplus_v13_1.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v13_1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "d50c69d6-d385-44f0-97c0-2554f2b248ce",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<div class=\"alert\" style=\"background-color:#BBA14F; color:white; padding:0px 10px; border-radius:5px;\">\n",
     "    <h1 style='margin:15px 15px; color:#000000; font-size:32px'><b>New Recurrent Network (best13)</b></h1>\n",
@@ -15,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "763b0295",
    "metadata": {
     "tags": []
@@ -206,6 +208,9 @@
     "    def call(self, inputs, states, training=None):\n",
     "        prev_output, state0, state1, state2 = states[0], states[1], states[2], states[3]\n",
     "        \n",
+    "        # w_in = tf.linalg.set_diag(self.kernel, np.zeros((self.units,), dtype=int))\n",
+    "        w_in = self.kernel\n",
+    "        \n",
     "        w_op0, w_op1, w_op2, w_op3 = tf.split(self.recurrent_kernel, num_or_size_splits=4, axis=1)\n",
     "        w_op0 = tf.linalg.set_diag(w_op0, np.zeros((self.units,), dtype=int))\n",
     "        w_op1 = tf.linalg.set_diag(w_op1, np.zeros((self.units,), dtype=int))\n",
@@ -216,7 +221,7 @@
     "        \n",
     "        w_out0, w_out1, w_out2 = tf.split(self.outputs_kernel, num_or_size_splits=3, axis=1)\n",
     "        \n",
-    "        inputs = tf.keras.backend.dot(inputs, self.kernel)\n",
+    "        inputs = tf.keras.backend.dot(inputs, w_in)\n",
     "        if self.bias is not None:\n",
     "            inputs = tf.keras.backend.bias_add(inputs, self.bias)\n",
     "            \n",
@@ -229,8 +234,8 @@
     "        p_out1 = tf.keras.backend.dot(prev_output, w_out1)\n",
     "        p_out2 = tf.keras.backend.dot(prev_output, w_out2)\n",
     "        \n",
-    "        z = tf.nn.tanh(tf.nn.relu(w_aux[0]*state0 + inputs) + (w_aux[1]*op0) + (w_aux[2]*state1 + op0))\n",
-    "        i = 0.5*tf.nn.tanh(op1 + (w_aux[4]*(w_aux[3]*z) + op3) + (w_aux[6]*(w_aux[2]*state1 + w_aux[5]*z + op0) + p_out1)) + z\n",
+    "        z = tf.nn.tanh(tf.nn.relu(w_aux[0]*state0 + inputs) + w_aux[1]*op0 + w_aux[2]*state1 + op0)\n",
+    "        i = 0.5*tf.nn.tanh(op1 + w_aux[4]*(w_aux[3]*z + op3) + w_aux[6]*(w_aux[2]*state1 + w_aux[5]*z + op0) + p_out1) + z\n",
     "        f = 0.5*tf.nn.tanh(prev_output + 0.5*tf.nn.tanh(op2) + 0.5 + w_aux[7]*state1 + w_aux[8]*prev_output + p_out2) + 0.5 \n",
     "    \n",
     "        s = tf.math.add(tf.math.multiply(f, state2, name='mul_f_state2'), tf.math.multiply(i, z, name='mul_i_z'), name='add_s')\n",
@@ -269,7 +274,17 @@
       "(12535, 360) (12537, 360)\n",
       "Step 2: Separating values and labels.\n",
       "+ Training set:    (12535, 40, 3) (12535, 6) float64\n",
-      "+ Validating set:  (12537, 40, 3) (12537, 6) float64\n"
+      "+ Validating set:  (12537, 40, 3) (12537, 6) float64\n",
+      "Epoch 1/3\n",
+      "3134/3134 [==============================] - 136s 43ms/step - loss: 0.3529 - val_loss: 0.3436\n",
+      "Epoch 2/3\n",
+      "3134/3134 [==============================] - 141s 45ms/step - loss: 0.3443 - val_loss: 0.3533\n",
+      "Epoch 3/3\n",
+      "3134/3134 [==============================] - 153s 49ms/step - loss: 0.3438 - val_loss: 0.3407\n",
+      "3135/3135 [==============================] - 21s 7ms/step\n",
+      "12537/12537 [==============================] - 89s 7ms/step - loss: 0.3407\n",
+      "392/392 [==============================] - 3s 7ms/step\n",
+      "0.84681\n"
      ]
     }
    ],
@@ -305,56 +320,15 @@
     "        y_val[ i, j ] = fromBit( y_val[ i, j ] )\n",
     "\n",
     "print(\"+ Training set:   \", x_train.shape, y_train.shape, x_train.dtype)\n",
-    "print(\"+ Validating set: \", x_val.shape, y_val.shape, x_val.dtype)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c3f90c63",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "3134/3134 [==============================] - 169s 53ms/step - loss: 0.3516 - val_loss: 0.3423\n",
-      "Epoch 2/10\n",
-      "3134/3134 [==============================] - 166s 53ms/step - loss: 0.3439 - val_loss: 0.3535\n",
-      "Epoch 3/10\n",
-      "3134/3134 [==============================] - 165s 53ms/step - loss: 0.3435 - val_loss: 0.3400\n",
-      "Epoch 4/10\n",
-      "3134/3134 [==============================] - 165s 53ms/step - loss: 0.3426 - val_loss: 0.3414\n",
-      "Epoch 5/10\n",
-      "3134/3134 [==============================] - 173s 55ms/step - loss: 0.3417 - val_loss: 0.3399\n",
-      "Epoch 6/10\n",
-      "3134/3134 [==============================] - 171s 54ms/step - loss: 0.3404 - val_loss: 0.3396\n",
-      "Epoch 7/10\n",
-      "3134/3134 [==============================] - 166s 53ms/step - loss: 0.3393 - val_loss: 0.3365\n",
-      "Epoch 8/10\n",
-      "3134/3134 [==============================] - 172s 55ms/step - loss: 0.3387 - val_loss: 0.3373\n",
-      "Epoch 9/10\n",
-      "3134/3134 [==============================] - 179s 57ms/step - loss: 0.3382 - val_loss: 0.3353\n",
-      "Epoch 10/10\n",
-      "3134/3134 [==============================] - 168s 54ms/step - loss: 0.3374 - val_loss: 0.3359\n",
-      "3135/3135 [==============================] - 23s 7ms/step\n",
-      "12537/12537 [==============================] - 86s 7ms/step - loss: 0.3359\n",
-      "392/392 [==============================] - 3s 8ms/step\n",
-      "0.8499\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"+ Validating set: \", x_val.shape, y_val.shape, x_val.dtype)\n",
+    "\n",
     "model = rnn_plus_model(noIn, noOut, timestep=40)\n",
     "model_history = model.fit(\n",
     "                    x_train, y_train,\n",
     "                    batch_size=int(hyperparams['batchSize']),\n",
     "                    verbose=1, # Suppress chatty output; use Tensorboard instead\n",
-    "                    epochs=10,\n",
-    "                    # epochs=int(hyperparams['numTrainingSteps']/(x_train.shape[0])),\n",
+    "                    # epochs=10,\n",
+    "                    epochs=int(hyperparams['numTrainingSteps']/(x_train.shape[0])),\n",
     "                    validation_data=(x_val, y_val),\n",
     "                    shuffle=True,\n",
     "                    use_multiprocessing=False,\n",
@@ -368,6 +342,99 @@
     "\n",
     "print(round(customMetricfn(y_val, y_pred), 5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c3f90c63",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1: Dividing the training and testing set with ratio 1:1 (50%).\n",
+      "(12505, 360) (12504, 360)\n",
+      "Step 2: Separating values and labels.\n",
+      "+ Training set:    (12505, 40, 3) (12505, 6) float64\n",
+      "+ Validating set:  (12504, 40, 3) (12504, 6) float64\n",
+      "Epoch 1/3\n",
+      "3127/3127 [==============================] - 155s 49ms/step - loss: 0.3738 - val_loss: 0.3746\n",
+      "Epoch 2/3\n",
+      "3127/3127 [==============================] - 154s 49ms/step - loss: 0.3709 - val_loss: 0.3727\n",
+      "Epoch 3/3\n",
+      "3127/3127 [==============================] - 170s 54ms/step - loss: 0.3699 - val_loss: 0.3699\n",
+      "3126/3126 [==============================] - 23s 7ms/step\n",
+      "12504/12504 [==============================] - 94s 7ms/step - loss: 0.3699\n",
+      "391/391 [==============================] - 4s 9ms/step\n",
+      "0.83333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Step 1: Dividing the training and testing set with ratio 1:1 (50%).')\n",
+    "df_train = np.array(pd.read_csv(os.path.join(path,'wisdm.ni=3.no=6.ts=40.os=40.spit=0.all.shuffled.train.csv'), skiprows=0))\n",
+    "df_val = np.array(pd.read_csv(os.path.join(path,'wisdm.ni=3.no=6.ts=40.os=40.spit=0.all.shuffled.test.csv'), skiprows=0))\n",
+    "\n",
+    "print(df_train.shape, df_val.shape)\n",
+    "\n",
+    "# with open(os.path.join(path,'wisdm.ni=3.no=6.ts=40.os=40.spit=0.all.shuffled.train.csv'), \"r\") as fp:\n",
+    "#     [noIn, noOut] = [int(x) for x in fp.readline().replace('\\n', '').split(',')]\n",
+    "noIn, noOut = 3, 6\n",
+    "\n",
+    "print('Step 2: Separating values and labels.')\n",
+    "x_train, y_train = seperateValues(df_train, noIn, noOut, isMoore=ISMOORE_DATASETS)\n",
+    "x_val, y_val = seperateValues(df_val, noIn, noOut, isMoore=ISMOORE_DATASETS)\n",
+    "for i in range( x_train.shape[ 0 ] ) :\n",
+    "    for j in range( x_train.shape[ 1 ] ) :\n",
+    "        for k in range( x_train.shape[ 2 ] ) :\n",
+    "            x_train[ i, j, k ] = fromBit( x_train[ i, j, k ] )\n",
+    "\n",
+    "for i in range( y_train.shape[ 0 ] ) :\n",
+    "    for j in range( y_train.shape[ 1 ] ) :\n",
+    "        y_train[ i, j ] = fromBit( y_train[ i, j ] )\n",
+    "\n",
+    "for i in range( x_val.shape[ 0 ] ) :\n",
+    "    for j in range( x_val.shape[ 1 ] ) :\n",
+    "        for k in range( x_val.shape[ 2 ] ) :\n",
+    "            x_val[ i, j, k ] = fromBit( x_val[ i, j, k ] )\n",
+    "\n",
+    "for i in range( y_val.shape[ 0 ] ) :\n",
+    "    for j in range( y_val.shape[ 1 ] ) :\n",
+    "        y_val[ i, j ] = fromBit( y_val[ i, j ] )\n",
+    "\n",
+    "print(\"+ Training set:   \", x_train.shape, y_train.shape, x_train.dtype)\n",
+    "print(\"+ Validating set: \", x_val.shape, y_val.shape, x_val.dtype)\n",
+    "\n",
+    "model = rnn_plus_model(noIn, noOut, timestep=40)\n",
+    "model_history = model.fit(\n",
+    "                    x_train, y_train,\n",
+    "                    batch_size=int(hyperparams['batchSize']),\n",
+    "                    verbose=1, # Suppress chatty output; use Tensorboard instead\n",
+    "                    # epochs=10,\n",
+    "                    epochs=int(hyperparams['numTrainingSteps']/(x_train.shape[0])),\n",
+    "                    validation_data=(x_val, y_val),\n",
+    "                    shuffle=True,\n",
+    "                    use_multiprocessing=False,\n",
+    "                    callbacks=[tensorboard_callback]\n",
+    "                )\n",
+    "y_pred = model.predict(x_val, verbose=1, batch_size=int(hyperparams['batchSize']))\n",
+    "\n",
+    "val_performance = model.evaluate(x_val, y_val, batch_size=int(hyperparams['batchSize']), verbose=1)\n",
+    "y_pred = model.predict(x_val, verbose=1)\n",
+    "\n",
+    "print(round(customMetricfn(y_val, y_pred), 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b86a8fe-bffc-4ad8-9e23-5562317ff81f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
