--- a/notebooks/rnnplus_for_har/LSTM_wtLRS.ipynb
+++ b/notebooks/rnnplus_for_har/LSTM_wtLRS.ipynb
@@ -159,6 +159,18 @@
     "    optimizer = tf.keras.optimizers.Adam(learning_rate=customLRSchedule(hyperparams['initialLearningRate'], hyperparams['learningRateDecay'], hyperparams['decayDurationFactor'], hyperparams['numTrainingSteps']), \\\n",
     "                                    beta_1=hyperparams['beta1'], beta_2=hyperparams['beta2'], epsilon=hyperparams['epsilon'], amsgrad=False, name=\"tunedAdam_lstm\")\n",
     "    model.compile(optimizer=optimizer, loss = 'mse', run_eagerly=False)\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def lstm_wtLRS_wtCMF_model(noInput, noOutput, timestep):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.LSTM(units=hyperparams['noUnits'], input_shape=[timestep, noInput],\n",
+    "                   activation='tanh', recurrent_activation='sigmoid', unroll=False, use_bias=True,\n",
+    "                   recurrent_dropout=0.0, return_sequences=False, name='LSTM_layer'))\n",
+    "    model.add(tf.keras.layers.Dense(noInput+noOutput, activation='tanh', name='MLP_layer'))\n",
+    "    model.add(tf.keras.layers.Dense(noOutput))\n",
+    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001, decay=0, name=\"Adam_wtlrs\")\n",
+    "    model.compile(optimizer=optimizer, loss = 'mse', run_eagerly=False)\n",
     "    return model"
    ]
   },
@@ -180,59 +192,59 @@
       "+ Training set:    (12535, 40, 3) (12535, 6) float64\n",
       "+ Validating set:  (12537, 40, 3) (12537, 6) float64\n",
       "Epoch 1/25\n",
-      "3134/3134 [==============================] - 40s 12ms/step - loss: 0.1598 - val_loss: 0.0976\n",
+      "3134/3134 [==============================] - 35s 11ms/step - loss: 0.1567 - val_loss: 0.0922\n",
       "Epoch 2/25\n",
-      "3134/3134 [==============================] - 40s 13ms/step - loss: 0.0662 - val_loss: 0.0631\n",
+      "3134/3134 [==============================] - 35s 11ms/step - loss: 0.0612 - val_loss: 0.0942\n",
       "Epoch 3/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0417 - val_loss: 0.0603\n",
+      "3134/3134 [==============================] - 35s 11ms/step - loss: 0.0400 - val_loss: 0.0537\n",
       "Epoch 4/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0319 - val_loss: 0.0644\n",
+      "3134/3134 [==============================] - 38s 12ms/step - loss: 0.0325 - val_loss: 0.0698\n",
       "Epoch 5/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0275 - val_loss: 0.0589\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0300 - val_loss: 0.0537\n",
       "Epoch 6/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0246 - val_loss: 0.0578\n",
+      "3134/3134 [==============================] - 39s 12ms/step - loss: 0.0239 - val_loss: 0.0763\n",
       "Epoch 7/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0197 - val_loss: 0.0617\n",
+      "3134/3134 [==============================] - 39s 12ms/step - loss: 0.0217 - val_loss: 0.0542\n",
       "Epoch 8/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0188 - val_loss: 0.0548\n",
+      "3134/3134 [==============================] - 43s 14ms/step - loss: 0.0195 - val_loss: 0.0478\n",
       "Epoch 9/25\n",
-      "3134/3134 [==============================] - 40s 13ms/step - loss: 0.0161 - val_loss: 0.0559\n",
+      "3134/3134 [==============================] - 40s 13ms/step - loss: 0.0191 - val_loss: 0.0589\n",
       "Epoch 10/25\n",
-      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0167 - val_loss: 0.0526\n",
+      "3134/3134 [==============================] - 40s 13ms/step - loss: 0.0148 - val_loss: 0.0477\n",
       "Epoch 11/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0146 - val_loss: 0.0531\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0140 - val_loss: 0.0474\n",
       "Epoch 12/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0129 - val_loss: 0.0583\n",
+      "3134/3134 [==============================] - 43s 14ms/step - loss: 0.0119 - val_loss: 0.0432\n",
       "Epoch 13/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0128 - val_loss: 0.0539\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0123 - val_loss: 0.0521\n",
       "Epoch 14/25\n",
-      "3134/3134 [==============================] - 40s 13ms/step - loss: 0.0109 - val_loss: 0.0552\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0108 - val_loss: 0.0502\n",
       "Epoch 15/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0092 - val_loss: 0.0585\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0116 - val_loss: 0.0586\n",
       "Epoch 16/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0081 - val_loss: 0.0609\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0115 - val_loss: 0.0491\n",
       "Epoch 17/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0099 - val_loss: 0.0529\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0088 - val_loss: 0.0515\n",
       "Epoch 18/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0078 - val_loss: 0.0578\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0098 - val_loss: 0.0509\n",
       "Epoch 19/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0070 - val_loss: 0.0519\n",
+      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0091 - val_loss: 0.0469\n",
       "Epoch 20/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0079 - val_loss: 0.0513\n",
+      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0080 - val_loss: 0.0501\n",
       "Epoch 21/25\n",
-      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0066 - val_loss: 0.0532\n",
+      "3134/3134 [==============================] - 43s 14ms/step - loss: 0.0083 - val_loss: 0.0488\n",
       "Epoch 22/25\n",
-      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0062 - val_loss: 0.0570\n",
+      "3134/3134 [==============================] - 44s 14ms/step - loss: 0.0069 - val_loss: 0.0499\n",
       "Epoch 23/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0053 - val_loss: 0.0563\n",
+      "3134/3134 [==============================] - 46s 15ms/step - loss: 0.0066 - val_loss: 0.0496\n",
       "Epoch 24/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0042 - val_loss: 0.0510\n",
+      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0058 - val_loss: 0.0473\n",
       "Epoch 25/25\n",
-      "3134/3134 [==============================] - 41s 13ms/step - loss: 0.0041 - val_loss: 0.0505\n",
+      "3134/3134 [==============================] - 42s 13ms/step - loss: 0.0069 - val_loss: 0.0489\n",
       "3135/3135 [==============================] - 9s 3ms/step\n",
-      "3135/3135 [==============================] - 9s 3ms/step - loss: 0.0505\n",
+      "3135/3135 [==============================] - 9s 3ms/step - loss: 0.0489\n",
       "392/392 [==============================] - 3s 7ms/step\n",
-      "0.98258\n"
+      "0.98282\n"
      ]
     }
    ],
@@ -263,7 +275,7 @@
     "print(\"+ Training set:   \", x_train.shape, y_train.shape, x_train.dtype)\n",
     "print(\"+ Validating set: \", x_val.shape, y_val.shape, x_val.dtype)\n",
     "\n",
-    "model = lstm_wLRS_wtCMF_model(noIn, noOut, timestep=timestep)\n",
+    "model = lstm_wtLRS_wtCMF_model(noIn, noOut, timestep=timestep)\n",
     "model_history = model.fit(\n",
     "                    x_train, y_train,\n",
     "                    batch_size=int(hyperparams['batchSize']),\n",
@@ -301,59 +313,59 @@
       "+ Training set:    (12506, 40, 3) (12506, 6) float64\n",
       "+ Validating set:  (12505, 40, 3) (12505, 6) float64\n",
       "Epoch 1/25\n",
-      "3127/3127 [==============================] - 46s 14ms/step - loss: 0.1623 - val_loss: 0.0992\n",
+      "3127/3127 [==============================] - 43s 13ms/step - loss: 0.1538 - val_loss: 0.0905\n",
       "Epoch 2/25\n",
-      "3127/3127 [==============================] - 48s 15ms/step - loss: 0.0742 - val_loss: 0.0552\n",
+      "3127/3127 [==============================] - 42s 14ms/step - loss: 0.0727 - val_loss: 0.0600\n",
       "Epoch 3/25\n",
-      "3127/3127 [==============================] - 44s 14ms/step - loss: 0.0520 - val_loss: 0.0549\n",
+      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0513 - val_loss: 0.0423\n",
       "Epoch 4/25\n",
-      "3127/3127 [==============================] - 45s 14ms/step - loss: 0.0437 - val_loss: 0.0453\n",
+      "3127/3127 [==============================] - 43s 14ms/step - loss: 0.0440 - val_loss: 0.0340\n",
       "Epoch 5/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0367 - val_loss: 0.0463\n",
+      "3127/3127 [==============================] - 42s 14ms/step - loss: 0.0379 - val_loss: 0.0343\n",
       "Epoch 6/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0337 - val_loss: 0.0325\n",
+      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0320 - val_loss: 0.0328\n",
       "Epoch 7/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0322 - val_loss: 0.0312\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0286 - val_loss: 0.0281\n",
       "Epoch 8/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0277 - val_loss: 0.0311\n",
+      "3127/3127 [==============================] - 44s 14ms/step - loss: 0.0264 - val_loss: 0.0241\n",
       "Epoch 9/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0254 - val_loss: 0.0265\n",
+      "3127/3127 [==============================] - 42s 14ms/step - loss: 0.0236 - val_loss: 0.0248\n",
       "Epoch 10/25\n",
-      "3127/3127 [==============================] - 45s 14ms/step - loss: 0.0218 - val_loss: 0.0299\n",
+      "3127/3127 [==============================] - 43s 14ms/step - loss: 0.0210 - val_loss: 0.0274\n",
       "Epoch 11/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0210 - val_loss: 0.0379\n",
+      "3127/3127 [==============================] - 44s 14ms/step - loss: 0.0200 - val_loss: 0.0226\n",
       "Epoch 12/25\n",
-      "3127/3127 [==============================] - 42s 14ms/step - loss: 0.0220 - val_loss: 0.0254\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0184 - val_loss: 0.0216\n",
       "Epoch 13/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0172 - val_loss: 0.0241\n",
+      "3127/3127 [==============================] - 43s 14ms/step - loss: 0.0174 - val_loss: 0.0189\n",
       "Epoch 14/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0160 - val_loss: 0.0245\n",
+      "3127/3127 [==============================] - 46s 15ms/step - loss: 0.0162 - val_loss: 0.0211\n",
       "Epoch 15/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0146 - val_loss: 0.0219\n",
+      "3127/3127 [==============================] - 44s 14ms/step - loss: 0.0146 - val_loss: 0.0213\n",
       "Epoch 16/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0149 - val_loss: 0.0220\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0129 - val_loss: 0.0158\n",
       "Epoch 17/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0129 - val_loss: 0.0190\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0151 - val_loss: 0.0191\n",
       "Epoch 18/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0119 - val_loss: 0.0190\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0115 - val_loss: 0.0204\n",
       "Epoch 19/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0109 - val_loss: 0.0189\n",
+      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0120 - val_loss: 0.0220\n",
       "Epoch 20/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0113 - val_loss: 0.0204\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0105 - val_loss: 0.0177\n",
       "Epoch 21/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0094 - val_loss: 0.0176\n",
+      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0108 - val_loss: 0.0233\n",
       "Epoch 22/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0086 - val_loss: 0.0180\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0115 - val_loss: 0.0191\n",
       "Epoch 23/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0076 - val_loss: 0.0184\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0092 - val_loss: 0.0159\n",
       "Epoch 24/25\n",
-      "3127/3127 [==============================] - 41s 13ms/step - loss: 0.0081 - val_loss: 0.0169\n",
+      "3127/3127 [==============================] - 42s 14ms/step - loss: 0.0078 - val_loss: 0.0142\n",
       "Epoch 25/25\n",
-      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0073 - val_loss: 0.0179\n",
+      "3127/3127 [==============================] - 42s 13ms/step - loss: 0.0084 - val_loss: 0.0172\n",
       "3127/3127 [==============================] - 9s 3ms/step\n",
-      "3127/3127 [==============================] - 9s 3ms/step - loss: 0.0179\n",
-      "391/391 [==============================] - 3s 8ms/step\n",
-      "0.99351\n"
+      "3127/3127 [==============================] - 9s 3ms/step - loss: 0.0172\n",
+      "391/391 [==============================] - 3s 7ms/step\n",
+      "0.99375\n"
      ]
     }
    ],
@@ -383,7 +395,7 @@
     "print(\"+ Training set:   \", x_train.shape, y_train.shape, x_train.dtype)\n",
     "print(\"+ Validating set: \", x_val.shape, y_val.shape, x_val.dtype)\n",
     "\n",
-    "model = lstm_wLRS_wtCMF_model(noIn, noOut, timestep=40)\n",
+    "model = lstm_wtLRS_wtCMF_model(noIn, noOut, timestep=40)\n",
     "model_history = model.fit(\n",
     "                    x_train, y_train,\n",
     "                    batch_size=int(hyperparams['batchSize']),\n",
